# benchmark_lunar

./: README.md
elevation_mapping/: README.md
elevation_mapping/elevation_mapping/: CMakeLists.txt
elevation_mapping/elevation_mapping/config/: elevation_mapping_config.yaml  grid_map_converter.yaml  grid_map_filters.yaml  grid_map_visualization.yaml
elevation_mapping/elevation_mapping/include/elevation_mapping/: ElevationMapping.hpp
elevation_mapping/elevation_mapping/include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp  PostprocessingWorker.hpp  PostprocessorPool.hpp
elevation_mapping/elevation_mapping/launch/: elevation_mapping.launch.py
elevation_mapping/elevation_mapping/scripts/: tf_to_pose_publisher.py
elevation_mapping/elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionMapUpdater.cpp  elevation_mapping_node.cpp
elevation_mapping/elevation_mapping/src/input_sources/: Input.cpp  InputSourceManager.cpp
elevation_mapping/elevation_mapping/src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessingWorker.cpp  PostprocessorPool.cpp
elevation_mapping/elevation_mapping/src/sensor_processors/: LaserSensorProcessor.cpp  SensorProcessorBase.cpp
kindr_ros/kindr_msgs/: CMakeLists.txt  package.xml
kindr_ros/kindr_msgs/msg/: VectorAtPosition.msg
kindr_ros/kindr_ros/: CMakeLists.txt  package.xml
kindr_ros/kindr_ros/include/kindr_ros/: RosGeometryMsgPhysicalQuantities.hpp  RosGeometryMsgPose.hpp  RosGeometryMsgRotation.hpp  RosGeometryMsgTwist.hpp  RosTfPose.hpp
kindr_ros/kindr_ros/test/: CMakeLists.txt  RosGeometryMsgPhysicalQuantitiesTest.cpp  RosGeometryMsgPoseTest.cpp  RosGeometryMsgRotationTest.cpp  RosTfPoseTest.cpp  TfConventionTest.cpp
scout_v2/: README.md
scout_v2/scout_description/: package.xml
scout_v2/scout_description/launch/: gazebo_description.launch.py
scout_v2/scout_description/urdf/: scout_gazebo.xacro  scout_v2.urdf  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro  scout_wheel_type3.xacro
scout_v2/scout_gazebo/: CMakeLists.txt  package.xml
scout_v2/scout_gazebo/launch/: moon.launch.py
scout_v2/scout_gazebo/models/apollo15_landing_site_1000x1000/: model-1_4.sdf  model.config
scout_v2/scout_gazebo/models/moon/: model.sdf
scout_v2/scout_gazebo/models/moon/materials/heightmap/: moon03.tif
scout_v2/scout_gazebo/worlds/: moon.world
scout_v2/scout_navigation/: CMakeLists.txt  package.xml
scout_v2/scout_navigation/config/: dwa_nav2.yaml  mppi_nav2.yaml  purepursuit_nav2.yaml  teb_nav2.yaml
scout_v2/scout_navigation/config/traversability_estimation/: grid_map_converter.yaml
scout_v2/scout_navigation/include/scout_navigation/: gridmap_converter.hpp  occmap_to_costmap.hpp
scout_v2/scout_navigation/launch/: .dockerrc  dwa.launch.py  mppi.launch.py  purepursuit.launch.py  teb.launch.py
scout_v2/scout_navigation/result/: benchmark.py  local.py
scout_v2/scout_navigation/rviz/: test.rviz
scout_v2/scout_navigation/slam_params/: mapper_params_localization.yaml
scout_v2/scout_navigation/src/: gridmap_converter.cpp  occmap_to_costmap.cpp
scout_v2/scout_navigation/src/nodes/: gridmap_converter_node.cpp
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
